--- a/templates/easebrain/index.html
+++ b/templates/easebrain/index.html
@@ -111,6 +111,8 @@
 
           <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
             <li><a href="#" class="nav-link px-2 text-white">Home</a></li>
+	    <li><a href="{% url 'easebrain:signup' %}" class="nav-link px-2 text-white">Signup</a></li>
+    	    <li><a href="{% url 'easebrain:login' %}" class="nav-link px-2 text-white">Login</a></li>
           </ul>
 
 
